--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,7 +14,7 @@
 		<meta name="msapplication-tap-highlight" content="no">
 		<link href="{{ asset('css/main.css') }}" rel="stylesheet">
 		<link href="{{ asset('css/style.css') }}" rel="stylesheet">
-		<link rel="icon" type="image/ico" href="{{ asset("images/Sigle_Reseau_Ribe_Blanc.ico") }}" />
+		<link rel="icon" type="image/ico" href="{{ asset("images/LOGO_PICTO/ico/Reseau_Ribe_Blanc.ico") }}" />
 	</head>
 
 	<style>
@@ -75,8 +75,8 @@
 							</div>
 							<button class="close"></button>
 						</div>
-						<ul class="header-menu nav"> {% block menu %}{% endblock %}
-							</ul>
+						<ul class="header-menu nav">
+						</ul>
 						</div>
 						<div class="app-header-right">
 							<div class="header-btn-lg pr-0">
@@ -85,14 +85,13 @@
 										<div class="widget-content-left">
 											<div class="btn-group">
 												<a data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="p-0 btn">
-													<img width="42" class="rounded-circle" src="{{ asset("images/societes/"~ app.user.company.databaseName ~".png") }}" alt="">
+													<img width="42" class="rounded-circle" src="{{ asset("images/LOGO_PICTO/"~ app.user.company.databaseName ~".png") }}" alt="">
 													<i class="fa fa-angle-down ml-2 opacity-8"></i>
 												</a>
 												<div tabindex="-1" role="menu" aria-hidden="true" class="dropdown-menu dropdown-menu-right">
 													<h6 tabindex="-1" class="dropdown-header">Client : {{ app.user.titleFC }}</h6>
 													<h6 tabindex="-1" class="dropdown-header">Article : {{ app.user.titleFA }}</h6>
 													<h6 tabindex="-1" class="dropdown-header">Fournisseur : {{ app.user.titleFF }}</h6>
-													<h6 tabindex="-1" class="dropdown-header">Email : {{ app.user.email }}</h6>
 													<div tabindex="-1" class="dropdown-divider"></div>
 													<a href="{{ path("app_logout") }}" type="button" tabindex="0" class="dropdown-item">Déconnexion</a>
 												</div>
@@ -147,7 +146,7 @@
 							<div class="app-sidebar__inner">
 								<ul class="vertical-nav-menu">
 									<li class="app-sidebar__heading">
-										<img src="{{ asset('images/Logo_Reseau_Ribe.png') }}" width="100%"/>
+										<img src="{{ asset('images/LOGO/Reseau_Ribe.png') }}" width="100%"/>
 									</li>
 
 									<li class="app-sidebar__heading">
@@ -162,23 +161,19 @@
 												<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
 											</a>
 											<ul>
-												{% if app.user.titleFC == "LOGISTIQUE" or app.user.titleFC == "DIRECTEUR" %}
-													<li><a href="#">Fiche Client à Valider</a></li>
-													{% if app.user.titleFC == "DIRECTEUR" %}
-														<li><a href="{{ path("newCustomerSheet") }}">Nouvelle Fiche Client</a></li>
-														<li><a href="{{ path("myCustomersSheets") }}">Mes Fiches Client</a></li>
-													{% endif %}
+												{% if app.user.titleFC == "VENDEUR" or app.user.titleFC == "DIRECTEUR" %}
+													<li><a href="{{ path("newCustomerSheet") }}">Nouvelle Fiche Client</a></li>
+													<li><a href="{{ path("myCustomersSheets") }}">Mes Fiches Client</a></li>
 												{% endif %}
-												{% if app.user.titleFC == "VENDEUR" %}
-														<li><a href="{{ path("newCustomerSheet") }}">Nouvelle Fiche Client</a></li>
-														<li><a href="{{ path("myCustomersSheets") }}">Mes Fiches Client</a></li>
+												{% if app.user.titleFC != "VENDEUR" %}
+													<li><a href="{{ path("validCustomersSheets") }}">Fiche Client à Valider</a></li>
 												{% endif %}
 												<li><a href="{{ path("customersSheets") }}">Liste des Fiches Client</a></li>
 											</ul>
 										</li>
 									{% endif %}
 
-									{% if app.user.accessFA == 1 or app.user.accessADM == 1 %}
+									{# {% if app.user.accessFA == 1 or app.user.accessADM == 1 %}
 										<li>
 											<a class="app-sidebar__heading">
 												<i class="metismenu-icon pe-7s-notebook"></i>
@@ -193,7 +188,7 @@
 													<li><a href="{{path("itemsSheets")}}">Liste des Fiches Articles</a></li>
 											</ul>
 										</li>
-									{% endif %}
+									{% endif %} #}
 
 									<li>
 										<a class="app-sidebar__heading">
@@ -221,31 +216,31 @@
 										</li>
 									{% endif %}
 									
-									{# <li>
-										<a class="app-sidebar__heading">
-											<i class="metismenu-icon pe-7s-graph2"></i>
-												TEST Fiches Clients
-											<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
-										</a>
-										<ul>
-											<li><a href="{{ path("test_HTML_CustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test HTML</a></li>
-											<li><a href="{{ path("test_PDF_CustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test PDF</a></li>
-											<li><a href="{{ path("test_Mail_CustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test MAIL</a></li>
-										</ul>
-									</li> #}
-									
 									<li>
 										<a class="app-sidebar__heading">
 											<i class="metismenu-icon pe-7s-graph2"></i>
-												TEST Fiches Articles
+												TEST - Fiches Clients
+											<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
+										</a>
+										<ul>
+											<li><a href="{{ path("testHTMLCustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test HTML</a></li>
+											<li><a href="{{ path("testPDFCustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test PDF</a></li>
+											<li><a href="{{ path("testMailCustomerSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test MAIL</a></li>
+										</ul>
+									</li>
+									
+									{# <li>
+										<a class="app-sidebar__heading">
+											<i class="metismenu-icon pe-7s-graph2"></i>
+												TEST - Fiches Articles
 											<i class="metismenu-state-icon pe-7s-angle-down caret-left"></i>
 										</a>
 										<ul>
 											<li><a href="{{ path("test_HTML_ItemSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test HTML</a></li>
 											<li><a href="{{ path("test_PDF_ItemSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test PDF</a></li>
-											<li><a href="{{ path("test_Mail_ItemSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test MAIL</a></li>
+											<li><a href="{{ path("testMailItemSheet") }}"><i class="metismenu-icon pe-7s-graph2"></i>Test MAIL</a></li>
 										</ul>
-									</li>
+									</li> #}
 
 									<li class="app-sidebar__heading">
 										<a href="{{ path("app_logout") }}" style="background-color: #ff595e; text-align: center;">Se Déconnecter</a>
