--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
   		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>Réseau Ribé > Connexion</title>
-		<link rel="icon" type="image/ico" href="{{ asset("images/Sigle_Reseau_Ribe_Blanc.ico") }}">
+		<link rel="icon" type="image/ico" href="{{ asset("images/LOGO_PICTO/ico/Reseau_Ribe_Blanc.ico") }}">
 
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,7 +27,7 @@
 			<div class="wrap-login100 p-l-55 p-r-55 p-t-65 p-b-54">
 				<form class="login100-form validate-form" method="POST">
 					<span class="login100-form-title p-b-49">
-						<img src="{{ asset('images/Logo_Reseau_Ribe.png') }}" width="100%"/>
+						<img src="{{ asset('images/LOGO/Reseau_Ribe.png') }}" width="100%"/>
 					</span>
 
 					<div class="wrap-input100 validate-input m-b-23" data-validate = "Username is reauired">
