--- a/templates/ItemsSheets/PDF_ItemsSheets.html.twig
+++ b/templates/ItemsSheets/PDF_ItemsSheets.html.twig
@@ -77,7 +77,7 @@
     <div id="header">
         <table style="text-align: center; ;font-size: 13px; border: 1px solid black" >
             <tr>
-                <td rowspan="5"><img src="{{ app.request.getSchemeAndHttpHost() ~ asset('images/Logo_Reseau_Ribe.png') }}" width="95%" alt="logo"></td> 
+                <td rowspan="5"><img src="{{ app.request.getSchemeAndHttpHost() ~ asset('images/LOGO/Reseau_Ribe.png') }}" width="95%" alt="logo"></td> 
                 <td colspan="3"></td>
             </tr>
             <tr>
